--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,11 @@
 {
   "compilerOptions": {
-    "target": "es6",
+    "outDir": "./dist",         
+    "rootDir": "./src",         
     "module": "commonjs",
-    "outDir": "./dist",
-    "rootDir": "./src",
+    "target": "es6",
     "strict": true,
-    "esModuleInterop": true,
-    "skipLibCheck": true
-  }
+    "esModuleInterop": true
+  },
+  "include": ["src"]
 }
