--- a/package.json
+++ b/package.json
@@ -14,10 +14,6 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
-    "@types/bcryptjs": "^2.4.2",
-    "@types/express": "^4.17.17",
-    "@types/jsonwebtoken": "^9.0.1",
-    "@types/node": "^18.15.0",
     "@upstash/redis": "^1.20.0",
     "axios": "^1.6.0",
     "bcryptjs": "^2.4.3",
@@ -28,8 +24,14 @@
     "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.0",
+    "redis": "^4.6.5"
+  },
+  "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.1",
+    "@types/node": "^18.15.0",
     "nodemon": "^2.0.22",
-    "redis": "^4.6.5",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.2"
   }
